@@ -181,21 +181,13 @@ let execute_phrase print_outcome ppf phr =
          bytecode and native toplevels always type-check _exactly_ the same
          expression. Adding the binding at the parsetree level (before typing)
          can create observable differences (e.g. in type variable names, see
-         tool-toplevel/pr10712.ml in the testsuite) *)
+         tool-toplevel/topeval.ml in the testsuite) *)
       let str, sg', rewritten =
-         match str.str_items with
-         | [ { str_desc = Tstr_eval (e, attrs) ; str_loc = loc } ]
-         | [ { str_desc = Tstr_value (Asttypes.Nonrecursive,
-                                       [{ vb_expr = e
-                                        ; vb_pat =
-                                            { pat_desc = Tpat_any;
-                                              pat_extra = []; _ }
-                                        ; vb_attributes = attrs }])
-             ; str_loc = loc }
-           ] ->
+         match find_eval_phrase str with
+         | Some (e, attrs, loc) ->
              let str, sg' = name_expression ~loc ~attrs e in
              str, sg', true
-         | _ -> str, sg', false
+         | None -> str, sg', false
       in
       let module_ident, res, required_globals, size =
         if Config.flambda then
